kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portra
  namespace: portra-system
  labels:
    app: portra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portra
  template:
    metadata:
      labels:
        app: portra
    spec:
      serviceAccountName: portra
      containers:
      - name: portra
        image: vadolasi/portra:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: portra-data-pvc
